...
    Scaffold(
        contentWindowInsets = contentWindowInsets,
        containerColor = if (performanceRoute) PerformanceColorScheme.background else MaterialTheme.colorScheme.background,
        bottomBar = {
            if (Screen.entries.any { it.route == currentRoute }) {
                PerformanceTheme {
                    NavigationBar(modifier = Modifier.testTag("main_navigation")) {
                        Screen.entries.forEach { screen ->
                            val selected = currentRoute == screen.route
                            NavigationBarItem(
                                selected = selected,
                                colors = NavigationBarItemDefaults.colors(
                                    indicatorColor = MaterialTheme.colorScheme.primary,
...
